# fast_zero_othon

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: __init__.py  auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 899d7ceea852_create_todos_table.py  c0d5d08f07e8_create_users_table.py  e1029ea042ab_add_column_updated_at_in_table_users.py
tests/: conftest.py  factories.py  test_app.py  test_orm.py  test_security.py
tests/routers/: test_app.py  test_auth.py  test_todos.py  test_users.py
